crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow-partitioned_clickbench_q13_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q13"
---
+---------------+----------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                     |
+---------------+----------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: c DESC NULLS FIRST, fetch=10                                                                       |
|               |   Projection: hits.SearchPhrase, count(Int64(1)) AS c                                                    |
|               |     Aggregate: groupBy=[[hits.SearchPhrase]], aggr=[[count(Int64(1))]]                                   |
|               |       Filter: hits.SearchPhrase != LargeUtf8("")                                                         |
|               |         TableScan: hits projection=[SearchPhrase], partial_filters=[hits.SearchPhrase != LargeUtf8("")]  |
| physical_plan | SortPreservingMergeExec: [c@1 DESC], fetch=10                                                            |
|               |   ProjectionExec: expr=[SearchPhrase@0 as SearchPhrase, count(Int64(1))@1 as c]                          |
|               |     SortExec: TopK(fetch=10), expr=[count(Int64(1))@1 DESC], preserve_partitioning=[true]                |
|               |       AggregateExec: mode=FinalPartitioned, gby=[SearchPhrase@0 as SearchPhrase], aggr=[count(Int64(1))] |
|               |         RepartitionExec: partitioning=Hash([SearchPhrase@0], 16), input_partitions=80                    |
|               |           AggregateExec: mode=Partial, gby=[SearchPhrase@0 as SearchPhrase], aggr=[count(Int64(1))]      |
|               |             FilterExec: SearchPhrase@0 !=                                                                |
|               |               SchemaCastScanExec                                                                         |
|               |                 PartitionedUnionExec                                                                     |
|               |                   BytesProcessedExec                                                                     |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                          |
|               |                   BytesProcessedExec                                                                     |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                          |
|               |                   BytesProcessedExec                                                                     |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                          |
|               |                   BytesProcessedExec                                                                     |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                          |
|               |                   BytesProcessedExec                                                                     |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                          |
|               |                                                                                                          |
+---------------+----------------------------------------------------------------------------------------------------------+
