crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow-partitioned_clickbench_q16_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q16"
---
+---------------+----------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                         |
+---------------+----------------------------------------------------------------------------------------------+
| logical_plan  | Sort: count(*) DESC NULLS FIRST, fetch=10                                                    |
|               |   Projection: hits.UserID, count(Int64(1)) AS count(*)                                       |
|               |     Aggregate: groupBy=[[hits.UserID]], aggr=[[count(Int64(1))]]                             |
|               |       TableScan: hits projection=[UserID]                                                    |
| physical_plan | SortPreservingMergeExec: [count(*)@1 DESC], fetch=10                                         |
|               |   ProjectionExec: expr=[UserID@0 as UserID, count(Int64(1))@1 as count(*)]                   |
|               |     SortExec: TopK(fetch=10), expr=[count(Int64(1))@1 DESC], preserve_partitioning=[true]    |
|               |       AggregateExec: mode=FinalPartitioned, gby=[UserID@0 as UserID], aggr=[count(Int64(1))] |
|               |         RepartitionExec: partitioning=Hash([UserID@0], 16), input_partitions=80              |
|               |           AggregateExec: mode=Partial, gby=[UserID@0 as UserID], aggr=[count(Int64(1))]      |
|               |             SchemaCastScanExec                                                               |
|               |               PartitionedUnionExec                                                           |
|               |                 BytesProcessedExec                                                           |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]                |
|               |                 BytesProcessedExec                                                           |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]                |
|               |                 BytesProcessedExec                                                           |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]                |
|               |                 BytesProcessedExec                                                           |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]                |
|               |                 BytesProcessedExec                                                           |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]                |
|               |                                                                                              |
+---------------+----------------------------------------------------------------------------------------------+
