crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow-partitioned_clickbench_q17_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q17"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                         |
+---------------+------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: count(*) DESC NULLS FIRST, fetch=10                                                                                    |
|               |   Projection: hits.UserID, hits.SearchPhrase, count(Int64(1)) AS count(*)                                                    |
|               |     Aggregate: groupBy=[[hits.UserID, hits.SearchPhrase]], aggr=[[count(Int64(1))]]                                          |
|               |       TableScan: hits projection=[UserID, SearchPhrase]                                                                      |
| physical_plan | SortPreservingMergeExec: [count(*)@2 DESC], fetch=10                                                                         |
|               |   ProjectionExec: expr=[UserID@0 as UserID, SearchPhrase@1 as SearchPhrase, count(Int64(1))@2 as count(*)]                   |
|               |     SortExec: TopK(fetch=10), expr=[count(Int64(1))@2 DESC], preserve_partitioning=[true]                                    |
|               |       AggregateExec: mode=FinalPartitioned, gby=[UserID@0 as UserID, SearchPhrase@1 as SearchPhrase], aggr=[count(Int64(1))] |
|               |         RepartitionExec: partitioning=Hash([UserID@0, SearchPhrase@1], 16), input_partitions=80                              |
|               |           AggregateExec: mode=Partial, gby=[UserID@0 as UserID, SearchPhrase@1 as SearchPhrase], aggr=[count(Int64(1))]      |
|               |             SchemaCastScanExec                                                                                               |
|               |               PartitionedUnionExec                                                                                           |
|               |                 BytesProcessedExec                                                                                           |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                |
|               |                 BytesProcessedExec                                                                                           |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                |
|               |                 BytesProcessedExec                                                                                           |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                |
|               |                 BytesProcessedExec                                                                                           |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                |
|               |                 BytesProcessedExec                                                                                           |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                |
|               |                                                                                                                              |
+---------------+------------------------------------------------------------------------------------------------------------------------------+
