crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow-partitioned_clickbench_q18_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q18"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                         |
+---------------+------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: hits.UserID, hits.SearchPhrase, count(Int64(1)) AS count(*)                                                      |
|               |   Limit: skip=0, fetch=10                                                                                                    |
|               |     Aggregate: groupBy=[[hits.UserID, hits.SearchPhrase]], aggr=[[count(Int64(1))]]                                          |
|               |       TableScan: hits projection=[UserID, SearchPhrase]                                                                      |
| physical_plan | ProjectionExec: expr=[UserID@0 as UserID, SearchPhrase@1 as SearchPhrase, count(Int64(1))@2 as count(*)]                     |
|               |   CoalescePartitionsExec: fetch=10                                                                                           |
|               |     LocalLimitExec: fetch=10                                                                                                 |
|               |       AggregateExec: mode=FinalPartitioned, gby=[UserID@0 as UserID, SearchPhrase@1 as SearchPhrase], aggr=[count(Int64(1))] |
|               |         RepartitionExec: partitioning=Hash([UserID@0, SearchPhrase@1], 32), input_partitions=160                             |
|               |           AggregateExec: mode=Partial, gby=[UserID@0 as UserID, SearchPhrase@1 as SearchPhrase], aggr=[count(Int64(1))]      |
|               |             SchemaCastScanExec                                                                                               |
|               |               PartitionedUnionExec                                                                                           |
|               |                 BytesProcessedExec                                                                                           |
|               |                   DataSourceExec: partitions=32, partition_sizes=[<redacted>]                                                |
|               |                 BytesProcessedExec                                                                                           |
|               |                   DataSourceExec: partitions=32, partition_sizes=[<redacted>]                                                |
|               |                 BytesProcessedExec                                                                                           |
|               |                   DataSourceExec: partitions=32, partition_sizes=[<redacted>]                                                |
|               |                 BytesProcessedExec                                                                                           |
|               |                   DataSourceExec: partitions=32, partition_sizes=[<redacted>]                                                |
|               |                 BytesProcessedExec                                                                                           |
|               |                   DataSourceExec: partitions=32, partition_sizes=[<redacted>]                                                |
|               |                                                                                                                              |
+---------------+------------------------------------------------------------------------------------------------------------------------------+
