crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow-partitioned_clickbench_q19_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q19"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                             |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: count(*) DESC NULLS FIRST, fetch=10                                                                                                                                                                                                        |
|               |   Projection: hits.UserID, date_part(Utf8("MINUTE"),to_timestamp(hits.EventTime)) AS m, hits.SearchPhrase, count(Int64(1)) AS count(*)                                                                                                           |
|               |     Aggregate: groupBy=[[hits.UserID, date_part(Utf8("MINUTE"), CAST(to_timestamp(hits.EventTime) AS Timestamp(ns))), hits.SearchPhrase]], aggr=[[count(Int64(1))]]                                                                              |
|               |       TableScan: hits projection=[EventTime, UserID, SearchPhrase]                                                                                                                                                                               |
| physical_plan | SortPreservingMergeExec: [count(*)@3 DESC], fetch=10                                                                                                                                                                                             |
|               |   ProjectionExec: expr=[UserID@0 as UserID, date_part(Utf8("MINUTE"),to_timestamp(hits.EventTime))@1 as m, SearchPhrase@2 as SearchPhrase, count(Int64(1))@3 as count(*)]                                                                        |
|               |     SortExec: TopK(fetch=10), expr=[count(Int64(1))@3 DESC], preserve_partitioning=[true]                                                                                                                                                        |
|               |       AggregateExec: mode=FinalPartitioned, gby=[UserID@0 as UserID, date_part(Utf8("MINUTE"),to_timestamp(hits.EventTime))@1 as date_part(Utf8("MINUTE"),to_timestamp(hits.EventTime)), SearchPhrase@2 as SearchPhrase], aggr=[count(Int64(1))] |
|               |         RepartitionExec: partitioning=Hash([UserID@0, date_part(Utf8("MINUTE"),to_timestamp(hits.EventTime))@1, SearchPhrase@2], 16), input_partitions=80                                                                                        |
|               |           AggregateExec: mode=Partial, gby=[UserID@1 as UserID, date_part(MINUTE, to_timestamp(EventTime@0)) as date_part(Utf8("MINUTE"),to_timestamp(hits.EventTime)), SearchPhrase@2 as SearchPhrase], aggr=[count(Int64(1))]                  |
|               |             SchemaCastScanExec                                                                                                                                                                                                                   |
|               |               PartitionedUnionExec                                                                                                                                                                                                               |
|               |                 BytesProcessedExec                                                                                                                                                                                                               |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                                                                                    |
|               |                 BytesProcessedExec                                                                                                                                                                                                               |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                                                                                    |
|               |                 BytesProcessedExec                                                                                                                                                                                                               |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                                                                                    |
|               |                 BytesProcessedExec                                                                                                                                                                                                               |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                                                                                    |
|               |                 BytesProcessedExec                                                                                                                                                                                                               |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                                                                                    |
|               |                                                                                                                                                                                                                                                  |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
