crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow-partitioned_clickbench_q20_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q20"
---
+---------------+--------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                             |
+---------------+--------------------------------------------------------------------------------------------------+
| logical_plan  | Filter: hits.UserID = Int64(435090932899640449)                                                  |
|               |   TableScan: hits projection=[UserID], partial_filters=[hits.UserID = Int64(435090932899640449)] |
| physical_plan | FilterExec: UserID@0 = 435090932899640449                                                        |
|               |   SchemaCastScanExec                                                                             |
|               |     PartitionedUnionExec                                                                         |
|               |       BytesProcessedExec                                                                         |
|               |         DataSourceExec: partitions=32, partition_sizes=[<redacted>]                              |
|               |       BytesProcessedExec                                                                         |
|               |         DataSourceExec: partitions=32, partition_sizes=[<redacted>]                              |
|               |       BytesProcessedExec                                                                         |
|               |         DataSourceExec: partitions=32, partition_sizes=[<redacted>]                              |
|               |       BytesProcessedExec                                                                         |
|               |         DataSourceExec: partitions=32, partition_sizes=[<redacted>]                              |
|               |       BytesProcessedExec                                                                         |
|               |         DataSourceExec: partitions=32, partition_sizes=[<redacted>]                              |
|               |                                                                                                  |
+---------------+--------------------------------------------------------------------------------------------------+
